# stardom

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
codegen/: .gitignore  Cargo.toml
codegen/data/: attributes.toml  elements.toml  events.toml  global_attributes.toml
codegen/src/: api.rs  data.rs  gen.rs  generate.rs  main.rs
examples/todo/: Cargo.toml  index.html
examples/todo/src/: main.rs
examples/todomvc/: stardom.toml
examples/todomvc/back/: Cargo.toml
examples/todomvc/common/: Cargo.toml
examples/todomvc/front/: Cargo.toml
examples/todomvc/front/src/: main.rs
scripts/: scrape.py
stardom/: Cargo.toml
stardom-cli/: Cargo.toml
stardom-cli/src/: cli.rs  config.rs  lib.rs  main.rs  shell.rs
stardom-cli/src/project/: mod.rs  watch.rs
stardom-cli/src/tools/: binaryen.rs  cargo.rs  mod.rs  wasm_bindgen.rs
stardom-cli/src/util/: error.rs  fmt.rs  mod.rs
stardom-core/: Cargo.toml
stardom-core/src/: attrs.rs  component.rs  env.rs  events.rs  lib.rs  macro.rs  node_ref.rs  util.rs
stardom-core/src/node/: browser.rs  hydrate.rs  mod.rs  render.rs
stardom-macros/: Cargo.toml  web.json  web.rs
stardom-macros/src/: bindings.rs  component.rs  create_named.rs  element.rs  fragment.rs  generate.rs  include.rs  lib.rs  named.rs  parse.rs  util.rs  web.rs
stardom-macros/src/nodes/: element.rs  fragment.rs  mod.rs  stmt.rs
stardom-macros/src/stmt/: attr.rs  bind.rs  event.rs  local.rs  mod.rs  node.rs  reactive.rs
stardom-reactive/: Cargo.toml
stardom-reactive/src/: effect.rs  lib.rs  memo.rs  runtime.rs  scope.rs  signal.rs
stardom/examples/: simple.rs
stardom/src/: attr.rs  component.rs  constants.rs  event.rs  lib.rs  macros.rs  node.rs  render.rs  util.rs  web.rs
stardom/src/reactive/: effect.rs  handle.rs  item.rs  memo.rs  mod.rs  runtime.rs  scope.rs  signal.rs
stardom/src/util/: attrs.rs  elements.rs  events.rs  lists.rs  mod.rs
tools/gen-dom/: Cargo.toml
tools/gen-dom/src/: main.rs
