[package]
name = "stardom-core"
version = "0.1.1"
edition = "2021"
license.workspace = true

[features]
default = [
  "wasm-bindgen-interning"
]
wasm-bindgen-interning = [
  "wasm-bindgen/enable-interning"
]

[dependencies]
stardom-reactive = { version = "0.1.1", path = "../stardom-reactive" }
stardom-macros = { version = "0.1.1", path = "../stardom-macros" }
bitflags = "2"
indexmap = "2"

wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Node",
  "Element",
  "NamedNodeMap",
  "Attr",
  "Text",
  "Range",
  "DocumentFragment",
  "NodeList",
  "Event",
  "AddEventListenerOptions",
  "TreeWalker",
  "Comment",

  # for bindings
  "HtmlInputElement",

  # for generated events
  "AnimationEvent",
  "CompositionEvent",
  "DragEvent",
  "FocusEvent",
  "InputEvent",
  "KeyboardEvent",
  "PointerEvent",
  "SubmitEvent",
  "TouchEvent",
  "TransitionEvent",
  "WebGlContextEvent",
  "WheelEvent",
]
