[package]
name = "stardom-macros"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Diego Sesmas"]
description = "Procedural macros for Stardom" # TODO
documentation = "https://docs.rs/stardom-macros"
homepage = "https://github.com/TheCodeSquid/stardom" # TODO?
repository = "https://github.com/TheCodeSquid/stardom"
keywords = ["web", "framework", "wasm"] # TODO
categories = ["template-engine", "wasm", "web-programming"] # TODO?

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.6"
