[package]
name = "stardom"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Diego Sesmas"]
description = "" # TODO
readme = "../README.md" # TODO
documentation = "https://docs.rs/stardom"
homepage = "https://github.com/TheCodeSquid/stardom" # TODO?
repository = "https://github.com/TheCodeSquid/stardom"
keywords = ["web", "framework", "wasm"] # TODO
categories = ["template-engine", "wasm", "web-programming"] # TODO?

[dependencies]
stardom-macros = { version = "0.1.1", path = "../stardom-macros" }
indexmap = "2"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Node",
  "Element",
  "NamedNodeMap",
  "Attr",
  "Text",
  "Range",
  "DocumentFragment",
  "NodeList",
  "Event",
  "AddEventListenerOptions",

  # types for generated events
  "AnimationEvent",
  "CompositionEvent",
  "DragEvent",
  "FocusEvent",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "PointerEvent",
  "SubmitEvent",
  "TouchEvent",
  "TransitionEvent",
  "WebGlContextEvent",
  "WheelEvent",
  # unstable apis
  "ClipboardEvent"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Comment"] }
